--- a/boo.html
+++ b/boo.html
@@ -299,7 +299,8 @@
 
     <hr style="width:80%; border:1px solid black; margin-top: 20px; margin-bottom: 20px;" />
 
-     <a href="tel:+1234567890" class="button">Or Give Us A CALL</a>
+     
+    <a href="tel:+1234567890" class="button" style="margin-bottom:13%">Or Give Us A CALL</a>
 
     <style>
         .button {
