--- a/boo.html
+++ b/boo.html
@@ -24,7 +24,7 @@
                 return false;
             }
 
-            var message = "SafeRide Booking Details:\n" +
+            var message = "UDrinkWeDrive Booking Details:\n" +
                 "Name: " + name + "\n" +
                 "Phone Number: " + phoneNumber + "\n" +
                 "Pick-Up Address: " + pickupAddress + "\n" +
